apps/sm-java-test-repo-01/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sm-java-test-repo-01
  labels:
    backstage.io/kubernetes-id: sm-java-test-repo-01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sm-java-test-repo-01
  template:
    metadata:
      labels:
        app: sm-java-test-repo-01
        backstage.io/kubernetes-id: sm-java-test-repo-01
    spec:
      containers:
        - name: sm-java-test-repo-01
          image: sureshmavp1/sm-java-test-repo-01:1.0.5
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
