apps/sm-java-test-repo-01/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sm-java-test-repo-01
spec:
  selector:
    app: sm-java-test-repo-01
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP


# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: sm-java-test-repo-01-ingress
# spec:
#   ingressClassName: gce
#   rules:
#   - host: sm-java-test-repo-01.example.com
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: sm-java-test-repo-01
#             port:
#               number: 80
